added dynamic resources

--- a/resources/index.html
+++ b/resources/index.html
@@ -15,10 +15,8 @@
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	
 	<!-- JavaScript -->
-  <!--<script src="../js/jquery-1.8.2.min.js" type="text/javascript"></script>
-  <script src="../js/jquery.orbit-1.2.3.min.js" type="text/javascript"></script>
-  <script src="../js/home.js" type="text/javascript"></script>
-  <script src="../js/projects.js" type="text/javascript"></script>-->
+  <script src="../js/jquery-1.8.2.min.js" type="text/javascript"></script>
+  <script src="../js/resources.js" type="text/javascript"></script>
   
   <!-- Google Analytics -->
   <script type="text/javascript">
@@ -68,44 +66,46 @@
         <div class="twelve columns">
           <h1>Resources</h1>
         </div>
-        <div class="four columns">
-          <h3><a href="http://bid.berkeley.edu/">Berkeley Institute of Design</a></h3>
-          <p>Interdisciplinary design research group. They house and serve as guardian angels for BI.</p>
-        </div>
-        <div class="four columns">
-          <h3><a href="http://www.decal.org/courses/design">The {design.} DeCal</a></h3>
-          <p>Introductory student-taught class run by Berkeley Innovation.</p>
-        </div>
-        <div class="four columns">
-          <h3><a href="http://www.delicious.com/berkeley.innovation">Design Resources</a></h3>
-          <p>Websites and readings related to design, via Delicious bookmarks.</p>
-        </div>
       </div>
-      <div class="row">
-        <div class="four columns">
-          <h3><a href="http://coursethreads.berkeley.edu/">Course Threads</a></h3>
-					<p>Undergraduate program that allows exploration of themes across disciplines, including Human-Centered Design.
-					</p>
-        </div>
-        <div class="four columns">
-          <h3><a href="../identity.txt">BI Identity Guidelines</a></h3>
-					<p>Typography and color palette reference for Berkeley Innovation (4 KB).</p>
-        </div>
-        <div class="four columns">
-          <h3><a href="../bi-tumblr-theme.txt">BI Tumblr Theme</a></h3>
-					<p>Official Tumblr theme used to document your BI project.</p>
-        </div>
+      <div class="row bitly">
+        <!-- <div class="four columns">
+                  <h3><a href="http://bid.berkeley.edu/">Berkeley Institute of Design</a></h3>
+                  <p>Interdisciplinary design research group. They house and serve as guardian angels for BI.</p>
+                </div>
+                <div class="four columns">
+                  <h3><a href="http://www.decal.org/courses/design">The {design.} DeCal</a></h3>
+                  <p>Introductory student-taught class run by Berkeley Innovation.</p>
+                </div>
+                <div class="four columns">
+                  <h3><a href="http://www.delicious.com/berkeley.innovation">Design Resources</a></h3>
+                  <p>Websites and readings related to design, via Delicious bookmarks.</p>
+                </div> -->
       </div>
-      <div class="row">
-        <div class="four columns">
-          <h3><a href="../logo-large.zip">BI Logo</a></h3>
-          <p>Download (25 KB).</p>
-        </div>
-        <div class="four columns">
-          <h3><a href="../behance-instructions.txt">Behance Upload Instructions</a></h3>
-          <p>How to contribute your Berkeley Innovation project on Behance to BI's portfolio.</p>
-        </div>
-      </div>
+      <!-- <div class="row">
+              <div class="four columns">
+                <h3><a href="http://coursethreads.berkeley.edu/">Course Threads</a></h3>
+                <p>Undergraduate program that allows exploration of themes across disciplines, including Human-Centered Design.
+                </p>
+              </div>
+              <div class="four columns">
+                <h3><a href="../identity.txt">BI Identity Guidelines</a></h3>
+                <p>Typography and color palette reference for Berkeley Innovation (4 KB).</p>
+              </div>
+              <div class="four columns">
+                <h3><a href="../bi-tumblr-theme.txt">BI Tumblr Theme</a></h3>
+                <p>Official Tumblr theme used to document your BI project.</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="four columns">
+                <h3><a href="../logo-large.zip">BI Logo</a></h3>
+                <p>Download (25 KB).</p>
+              </div>
+              <div class="four columns">
+                <h3><a href="../behance-instructions.txt">Behance Upload Instructions</a></h3>
+                <p>How to contribute your Berkeley Innovation project on Behance to BI's portfolio.</p>
+              </div>
+            </div> -->
     
     </div>
   </div><!-- end div#content -->
