changed linked in link

--- a/resources/index.html
+++ b/resources/index.html
@@ -85,7 +85,7 @@
               <li><a href="http://twitter.com/binnov"><img src="../images/social-twitter.png"></a></li>
               <li><a href="http://www.flickr.com/groups/berkeleyinnovation/"><img src="../images/social-flickr.png"></a></li>
               <li><a href="http://www.youtube.com/user/berkeleyinnovation"><img src="../images/social-youtube.png"></a></li>
-              <li><a href="http://www.linkedin.com/groups?homeNewMember=&gid=2722409&trk="><img src="../images/social-linkedin.png"></a></li>
+              <li><a href="http://www.linkedin.com/groups/Berkeley-Innovation-2722409"><img src="../images/social-linkedin.png"></a></li>
               <li><a href="http://www.behance.net/berkeleyinnovation"><img src="../images/social-behance.png"></a></li>
             </ul>
           </div>
