tumblr blogs to project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -73,6 +73,7 @@
       <div class="row">
         <div class="twelve columns">
           <h3><a href="http://www.behance.net/berkeleyinnovation">Visit our Behance portfolio &rarr;</a></h3>
+          <h3><a href="http://bitly.com/bundles/berkeleyinnovation/6">Check out our project team blogs from past semesters &rarr;</a></h3>
         </div>
       </div>
       
